finished landing page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/ubinthegamedev/"
+            ><img src="images/icons/insta.png" alt="Instagram logo"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/ubin.kotlin/">
+            <img src="images/icons/facebook.png" alt="Facebook logo" />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
