--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <section id="hero">
         <div id="hero-content">
-          <h1>Joe's Travel Page</h1>
+          <h1>Ubin Handsome's Travel Page</h1>
           <p>Let's expore the world together!</p>
           <a href="places.html">Discover page</a>
         </div>
